--- a/templates/success.html
+++ b/templates/success.html
@@ -10,4 +10,4 @@
 <p style="color: white; font-family: sans-serif">Whatever form you just filled, it worked!</p>
 <p style="color: white; font-family: sans-serif">And you can thank <a style="color: white" href="https://savirsingh.github.io">Savir Singh</a> for making Thatformworks!</p>
 <button onclick="window.location.href='javascript:history.back()'" style="background: white; color: black; padding: 24px">Go back</button>
-</body></center>
+  </body></center></html>
